[gd_scene load_steps=12 format=4 uid="uid://cwqfdwnnjre8"]

[ext_resource type="Script" uid="uid://c8d37nd8docoo" path="res://code/game.gd" id="1_0cso3"]
[ext_resource type="Texture2D" uid="uid://cqa4i0aywyyqk" path="res://sprites/tiles.png" id="1_4xfga"]
[ext_resource type="PackedScene" uid="uid://c13v7wdjec4ao" path="res://scenes/tralalerotralala.tscn" id="2_paxxb"]
[ext_resource type="Script" uid="uid://bjnt6co6vj1v7" path="res://code/addPoints.gd" id="4_0cso3"]
[ext_resource type="Script" uid="uid://bjpwxbjfpc0in" path="res://code/score.gd" id="5_2klcf"]
[ext_resource type="Script" uid="uid://dgm7qnbfvn7ff" path="res://code/timer.gd" id="6_2lpho"]
[ext_resource type="Script" uid="uid://dji8frw6iane1" path="res://scenes/level.gd" id="6_be0no"]
[ext_resource type="Script" uid="uid://0dfi8bk1eim7" path="res://code/timer_scatter.gd" id="7_nakos"]
[ext_resource type="PackedScene" uid="uid://b2kp580ey7f4r" path="res://scenes/sttings.tscn" id="8_jh32y"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_paxxb"]
texture = ExtResource("1_4xfga")
texture_region_size = Vector2i(15, 15)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-7.5, -7.5, 7.5, -7.5, 7.5, 7.5, -7.5, 7.5)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-7.5, -7.5, 7.5, -7.5, 7.5, 7.5, -7.5, 7.5)

[sub_resource type="TileSet" id="TileSet_gldc4"]
tile_size = Vector2i(15, 15)
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_paxxb")

[node name="map" type="Node2D"]
script = ExtResource("1_0cso3")

[node name="layers" type="Node2D" parent="."]

[node name="TileMapLayer" type="TileMapLayer" parent="layers"]
tile_map_data = PackedByteArray("AAAAAAAAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAAIAAAAAAAAAAAAAAAMAAAAAAAAAAAAAAAQAAAAAAAAAAAAAAAUAAAAAAAAAAAABAAAAAAAAAAAAAAACAAAAAAAAAAAAAAADAAAAAAAAAAAAAAAEAAAAAAAAAAAAAAADAAMAAAAAAAAAAAADAAQAAAAAAAAAAAAEAAQAAAAAAAAAAAAFAAQAAAAAAAAAAAADAAcAAAAAAAAAAAAEAAcAAAAAAAAAAAAFAAcAAAAAAAAAAAAAAAYAAAAAAAAAAAAAAAcAAAAAAAAAAAAAAAgAAAAAAAAAAAAAAAkAAAAAAAAAAAAAAAoAAAAAAAAAAAAEAAMAAAAAAAAAAAAFAAMAAAAAAAAAAAAFAAAAAAAAAAAAAAAGAAAAAAAAAAAAAAAHAAAAAAAAAAAAAAAIAAAAAAAAAAAAAAAJAAAAAAAAAAAAAAAKAAAAAAAAAAAAAAALAAAAAAAAAAAAAAAMAAAAAAAAAAAAAAANAAAAAAAAAAAAAAAOAAAAAAAAAAAAAAAPAAAAAAAAAAAAAAAQAAAAAAAAAAAAAAARAAAAAAAAAAAAAAASAAAAAAAAAAAAAAATAAAAAAAAAAAAAAAUAAAAAAAAAAAAAAAVAAAAAAAAAAAAAAAWAAAAAAAAAAAAAAAXAAAAAAAAAAAAAAAYAAAAAAAAAAAAAAAZAAAAAAAAAAAAAAAaAAAAAAAAAAAAAAAbAAAAAAAAAAAAAAAcAAAAAAAAAAAAAAABAAoAAAAAAAAAAAACAAoAAAAAAAAAAAADAAoAAAAAAAAAAAAEAAoAAAAAAAAAAAAFAAoAAAAAAAAAAAAIAAMAAAAAAAAAAAAIAAQAAAAAAAAAAAAJAAQAAAAAAAAAAAAKAAQAAAAAAAAAAAAKAAMAAAAAAAAAAAAJAAMAAAAAAAAAAAALAAQAAAAAAAAAAAALAAMAAAAAAAAAAAAIAAcAAAAAAAAAAAAIAAgAAAAAAAAAAAAIAAkAAAAAAAAAAAAIAAoAAAAAAAAAAAAJAAoAAAAAAAAAAAAKAAoAAAAAAAAAAAALAAoAAAAAAAAAAAAIAAsAAAAAAAAAAAAIAAwAAAAAAAAAAAAIAA0AAAAAAAAAAAAFAAsAAAAAAAAAAAAFAAwAAAAAAAAAAAAFAA0AAAAAAAAAAAAEAA0AAAAAAAAAAAADAA0AAAAAAAAAAAACAA0AAAAAAAAAAAABAA0AAAAAAAAAAAAAAA0AAAAAAAAAAAAAAAwAAAAAAAAAAAAAAAsAAAAAAAAAAAABAAwAAAAAAAAAAAABAAsAAAAAAAAAAAACAAwAAAAAAAAAAAACAAsAAAAAAAAAAAADAAsAAAAAAAAAAAADAAwAAAAAAAAAAAAEAAsAAAAAAAAAAAAEAAwAAAAAAAAAAAAOAAoAAAAAAAAAAAAOAAkAAAAAAAAAAAAOAAgAAAAAAAAAAAAOAAcAAAAAAAAAAAALAAcAAAAAAAAAAAAMAAcAAAAAAAAAAAANAAcAAAAAAAAAAAAPAAcAAAAAAAAAAAAQAAcAAAAAAAAAAAARAAcAAAAAAAAAAAAOAAQAAAAAAAAAAAAOAAMAAAAAAAAAAAAOAAIAAAAAAAAAAAAOAAEAAAAAAAAAAAASAAMAAAAAAAAAAAASAAQAAAAAAAAAAAATAAQAAAAAAAAAAAAUAAQAAAAAAAAAAAAUAAMAAAAAAAAAAAATAAMAAAAAAAAAAAAYAAMAAAAAAAAAAAAYAAQAAAAAAAAAAAAZAAQAAAAAAAAAAAAZAAMAAAAAAAAAAAAYAAcAAAAAAAAAAAAZAAcAAAAAAAAAAAARAAQAAAAAAAAAAAARAAMAAAAAAAAAAAAXAAMAAAAAAAAAAAAXAAQAAAAAAAAAAAAXAAcAAAAAAAAAAAAUAAcAAAAAAAAAAAAUAAgAAAAAAAAAAAAUAAkAAAAAAAAAAAAUAAoAAAAAAAAAAAATAAoAAAAAAAAAAAASAAoAAAAAAAAAAAARAAoAAAAAAAAAAAAUAAsAAAAAAAAAAAAUAAwAAAAAAAAAAAAUAA0AAAAAAAAAAAAcAAEAAAAAAAAAAAAcAAIAAAAAAAAAAAAcAAMAAAAAAAAAAAAcAAQAAAAAAAAAAAAcAAUAAAAAAAAAAAAcAAYAAAAAAAAAAAAcAAcAAAAAAAAAAAAcAAgAAAAAAAAAAAAcAAkAAAAAAAAAAAAcAAoAAAAAAAAAAAAbAAoAAAAAAAAAAAAaAAoAAAAAAAAAAAAZAAoAAAAAAAAAAAAYAAoAAAAAAAAAAAAXAAoAAAAAAAAAAAAXAAsAAAAAAAAAAAAXAAwAAAAAAAAAAAAXAA0AAAAAAAAAAAAYAA0AAAAAAAAAAAAZAA0AAAAAAAAAAAAaAA0AAAAAAAAAAAAbAA0AAAAAAAAAAAAcAA0AAAAAAAAAAAAcAAwAAAAAAAAAAAAcAAsAAAAAAAAAAAAbAAsAAAAAAAAAAAAaAAsAAAAAAAAAAAAZAAsAAAAAAAAAAAAYAAsAAAAAAAAAAAAYAAwAAAAAAAAAAAAZAAwAAAAAAAAAAAAaAAwAAAAAAAAAAAAbAAwAAAAAAAAAAAAAABAAAAABAAAAAAABABAAAAABAAAAAAACABAAAAABAAAAAAADABAAAAABAAAAAAAEABAAAAABAAAAAAAFABAAAAABAAAAAAAXABAAAAABAAAAAAAYABAAAAABAAAAAAAZABAAAAABAAAAAAAaABAAAAABAAAAAAAbABAAAAABAAAAAAAcABAAAAABAAAAAAAFABEAAAABAAAAAAAFABIAAAABAAAAAAAFABMAAAABAAAAAAAEABMAAAABAAAAAAADABMAAAABAAAAAAACABMAAAABAAAAAAABABMAAAABAAAAAAAAABMAAAABAAAAAAAAABIAAAABAAAAAAAAABEAAAABAAAAAAABABEAAAABAAAAAAACABEAAAABAAAAAAADABEAAAABAAAAAAADABIAAAABAAAAAAAEABIAAAABAAAAAAACABIAAAABAAAAAAABABIAAAABAAAAAAAEABEAAAABAAAAAAAXABEAAAABAAAAAAAXABIAAAABAAAAAAAXABMAAAABAAAAAAAYABMAAAABAAAAAAAZABMAAAABAAAAAAAaABMAAAABAAAAAAAbABMAAAABAAAAAAAcABMAAAABAAAAAAAcABIAAAABAAAAAAAcABEAAAABAAAAAAAbABEAAAABAAAAAAAaABEAAAABAAAAAAAZABEAAAABAAAAAAAYABEAAAABAAAAAAAYABIAAAABAAAAAAAZABIAAAABAAAAAAAaABIAAAABAAAAAAAbABIAAAABAAAAAAAIABAAAAABAAAAAAAIABEAAAABAAAAAAAIABIAAAABAAAAAAAIABMAAAABAAAAAAAUABEAAAABAAAAAAAUABIAAAABAAAAAAAUABMAAAABAAAAAAAUABAAAAABAAAAAAALABMAAAABAAAAAAAMABMAAAABAAAAAAANABMAAAABAAAAAAAOABMAAAABAAAAAAAPABMAAAABAAAAAAAQABMAAAABAAAAAAARABMAAAABAAAAAAAOABQAAAABAAAAAAAOABUAAAABAAAAAAAOABYAAAABAAAAAAAOABAAAAABAAAAAAALABAAAAABAAAAAAAMABAAAAABAAAAAAANABAAAAABAAAAAAAPABAAAAABAAAAAAAQABAAAAABAAAAAAARABAAAAABAAAAAAALAA8AAAABAAAAAAALAA4AAAAAAAAAAAALAA0AAAAAAAAAAAAMAA0AAAAAAAAAAAAQAA0AAAAAAAAAAAARAA0AAAAAAAAAAAARAA4AAAAAAAAAAAARAA8AAAABAAAAAAAIABYAAAABAAAAAAAJABYAAAABAAAAAAAKABYAAAABAAAAAAALABYAAAABAAAAAAARABYAAAABAAAAAAASABYAAAABAAAAAAATABYAAAABAAAAAAAUABYAAAABAAAAAAAXABYAAAABAAAAAAAYABYAAAABAAAAAAAZABYAAAABAAAAAAAXABcAAAABAAAAAAAXABgAAAABAAAAAAAXABkAAAABAAAAAAAcABQAAAABAAAAAAAcABUAAAABAAAAAAAcABYAAAABAAAAAAAcABcAAAABAAAAAAAcABgAAAABAAAAAAAcABkAAAABAAAAAAAbABkAAAABAAAAAAAaABkAAAABAAAAAAAcABoAAAABAAAAAAAcABsAAAABAAAAAAAcABwAAAABAAAAAAAcAB0AAAABAAAAAAAcAB4AAAABAAAAAAAcAB8AAAABAAAAAAAbAB8AAAABAAAAAAAaAB8AAAABAAAAAAAZAB8AAAABAAAAAAAYAB8AAAABAAAAAAAXAB8AAAABAAAAAAAWAB8AAAABAAAAAAAVAB8AAAABAAAAAAAUAB8AAAABAAAAAAATAB8AAAABAAAAAAASAB8AAAABAAAAAAARAB8AAAABAAAAAAAQAB8AAAABAAAAAAAPAB8AAAABAAAAAAAOAB8AAAABAAAAAAANAB8AAAABAAAAAAAMAB8AAAABAAAAAAALAB8AAAABAAAAAAAKAB8AAAABAAAAAAAJAB8AAAABAAAAAAAIAB8AAAABAAAAAAAHAB8AAAABAAAAAAAGAB8AAAABAAAAAAAFAB8AAAABAAAAAAAEAB8AAAABAAAAAAADAB8AAAABAAAAAAACAB8AAAABAAAAAAABAB8AAAABAAAAAAAAAB8AAAABAAAAAAAAAB4AAAABAAAAAAAAAB0AAAABAAAAAAAAABwAAAABAAAAAAAAABsAAAABAAAAAAAAABoAAAABAAAAAAAAABkAAAABAAAAAAAAABQAAAABAAAAAAAAABUAAAABAAAAAAAAABYAAAABAAAAAAAAABgAAAABAAAAAAAAABcAAAABAAAAAAABABkAAAABAAAAAAACABkAAAABAAAAAAAFABkAAAABAAAAAAAFABgAAAABAAAAAAAFABcAAAABAAAAAAAFABYAAAABAAAAAAAEABYAAAABAAAAAAADABYAAAABAAAAAAADABwAAAABAAAAAAAEABwAAAABAAAAAAAFABwAAAABAAAAAAAGABwAAAABAAAAAAAHABwAAAABAAAAAAAIABwAAAABAAAAAAAIABsAAAABAAAAAAAIABoAAAABAAAAAAAIABkAAAABAAAAAAAJABwAAAABAAAAAAAKABwAAAABAAAAAAAOABwAAAABAAAAAAAOABsAAAABAAAAAAAOABoAAAABAAAAAAAOABkAAAABAAAAAAANABkAAAABAAAAAAAMABkAAAABAAAAAAALABkAAAABAAAAAAAPABkAAAABAAAAAAAQABkAAAABAAAAAAARABkAAAABAAAAAAALABwAAAABAAAAAAARABwAAAABAAAAAAASABwAAAABAAAAAAATABwAAAABAAAAAAAUABwAAAABAAAAAAAUABsAAAABAAAAAAAUABkAAAABAAAAAAAUABoAAAABAAAAAAAVABwAAAABAAAAAAAWABwAAAABAAAAAAAXABwAAAABAAAAAAAYABwAAAABAAAAAAAZABwAAAABAAAAAAA=")
tile_set = SubResource("TileSet_gldc4")
rendering_quadrant_size = 15
collision_enabled = false

[node name="tralalerotralala" parent="." instance=ExtResource("2_paxxb")]
position = Vector2(217.5, 360)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(217.5, 220)

[node name="points" type="Node2D" parent="."]
script = ExtResource("4_0cso3")

[node name="score" type="Label" parent="."]
offset_left = 1.0
offset_top = -40.0
offset_right = 41.0
offset_bottom = -17.0
text = "S C O R E: "
script = ExtResource("5_2klcf")

[node name="level" type="Label" parent="."]
offset_left = 1.0
offset_top = -20.0
offset_right = 41.0
offset_bottom = 3.0
theme_override_font_sizes/font_size = 14
text = "Level:"
script = ExtResource("6_be0no")

[node name="TimerFrightened" type="Timer" parent="."]
one_shot = true
script = ExtResource("6_2lpho")

[node name="TimerScatter" type="Timer" parent="."]
one_shot = true
script = ExtResource("7_nakos")

[node name="sttings" parent="." instance=ExtResource("8_jh32y")]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 217.5
offset_top = 225.0
offset_right = 217.5
offset_bottom = 225.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = 195.0
offset_top = 195.0
offset_right = 240.0
offset_bottom = 202.5
color = Color(0, 0.980392, 0.988235, 0.254902)

[connection signal="timeout" from="TimerFrightened" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="TimerScatter" to="." method="_on_timer_scatter_timeout"]
